--- a/ProjetoAED.csproj
+++ b/ProjetoAED.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\Candidato.cs" />
+    <Compile Include="Classes\Curso.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
