--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 
 .vs/ProjetoAED/FileContentIndex/82222077-ecf8-4800-8d4f-da4d30b07798.vsidx
 .vs/ProjetoAED/FileContentIndex/be402e9e-ed19-4470-8ea2-4d4c20999d7c.vsidx
+.vs/ProjetoAED/v17/.suo
+.vs/ProjetoAED/FileContentIndex/557ed6c8-4ca8-4219-abdf-e75ccc752b1e.vsidx
