ajuda nois arthur

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 .vs/ProjetoAED/FileContentIndex/be402e9e-ed19-4470-8ea2-4d4c20999d7c.vsidx
 .vs/ProjetoAED/v17/.suo
 .vs/ProjetoAED/FileContentIndex/557ed6c8-4ca8-4219-abdf-e75ccc752b1e.vsidx
+.vs/ProjetoAED/FileContentIndex/76e92d1a-a7ed-4113-be1b-83d92f021865.vsidx
