--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 .vs/ProjetoAED/v17/.suo
 .vs/ProjetoAED/FileContentIndex/557ed6c8-4ca8-4219-abdf-e75ccc752b1e.vsidx
 .vs/ProjetoAED/FileContentIndex/76e92d1a-a7ed-4113-be1b-83d92f021865.vsidx
+.vs/ProjetoAED/FileContentIndex/f009e9a6-3a2e-4d77-a7e8-800c35b81ba6.vsidx
